--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.10.0",
+    "@tanstack/react-query": "^5.66.0",
     "@uploadthing/react": "^7.1.5",
     "accept-language": "^3.0.20",
     "bcrypt": "^5.1.1",
